--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-# sunshine-plaza
+------------------
+| sunshine-plaza |
+------------------
 
-little old lady (from pasadena)
+'little old lady' (from pasadena)
 
-# federal reserve bank of san rancisco
+# federal reserve bank of san francisco
 https://en.wikipedia.org/wiki/Federal_Reserve_Bank_of_San_Francisco
