--- a/README
+++ b/README
@@ -4,5 +4,9 @@
 
 'little old lady' (from pasadena)
 
+
+# trump
+https://en.wikipedia.org/wiki/Trump_(card_games)
+
 # federal reserve bank of san francisco
 https://en.wikipedia.org/wiki/Federal_Reserve_Bank_of_San_Francisco
