--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 'little old lady' (from pasadena)
 
 
-# trump
+# trump (card games)
 https://en.wikipedia.org/wiki/Trump_(card_games)
 
 # federal reserve bank of san francisco
