--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-------------------
-| sunshine-plaza |
-------------------
+-------------------
+| little-old-lady |
+-------------------
 
-'little old lady' (from pasadena)
+'sunshine plaza'
 
 
 # trump (card games)
